<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <!-- Fragmento de Splash Screen -->
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.pdm.domohouse.ui.splash.SplashFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_splash">
        
        <!-- Navegación a Login después del splash -->
        <action
            android:id="@+id/action_splash_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
            
        <!-- Navegación directa a Home si ya está autenticado -->
        <action
            android:id="@+id/action_splash_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Fragmento de Login -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.pdm.domohouse.ui.auth.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">
        
        <!-- Navegación a Home después de login exitoso -->
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
            
        <!-- Navegación a registro -->
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
    </fragment>

    <!-- Fragmento de Registro -->
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.pdm.domohouse.ui.auth.RegisterFragment"
        android:label="@string/register_title"
        tools:layout="@layout/fragment_register">
        
        <!-- Navegación a Home después de registro exitoso -->
        <action
            android:id="@+id/action_register_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
            
        <!-- Acción para compatibilidad -->
        <action
            android:id="@+id/action_registerFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
            
        <!-- Volver a Login -->
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Fragmento de Home Principal -->
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.pdm.domohouse.ui.home.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home">
        
        <!-- Navegación a Perfil -->
        <action
            android:id="@+id/action_home_to_profile"
            app:destination="@id/profileFragment" />
            
        <!-- Navegación a Temperatura -->
        <action
            android:id="@+id/action_home_to_temperature"
            app:destination="@id/temperatureFragment" />
            
        <!-- Navegación a Login (logout) -->
        <action
            android:id="@+id/action_home_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
            
        <!-- Navegación a Luces -->
        <action
            android:id="@+id/action_home_to_lights"
            app:destination="@id/lightsFragment" />
            
        <!-- Navegación a Seguridad -->
        <action
            android:id="@+id/action_home_to_security"
            app:destination="@id/securityFragment" />
            
        <!-- Navegación a Dispositivos -->
        <action
            android:id="@+id/action_home_to_devices"
            app:destination="@id/devicesFragment" />
    </fragment>

    <!-- Fragmento de Perfil -->
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.pdm.domohouse.ui.profile.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile">
        
        <!-- Navegación a Login (logout) -->
        <action
            android:id="@+id/action_profile_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/profileFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Fragmento de Temperatura -->
    <fragment
        android:id="@+id/temperatureFragment"
        android:name="com.pdm.domohouse.ui.temperature.TemperatureFragment"
        android:label="@string/temperature_title"
        tools:layout="@layout/fragment_temperature" />

    <!-- Fragmentos temporales (stub) para evitar errores de navegación -->
    <fragment
        android:id="@+id/lightsFragment"
        android:name="com.pdm.domohouse.ui.lights.LightsFragment"
        android:label="@string/lights_title"
        tools:layout="@layout/fragment_lights" />
        
    <fragment
        android:id="@+id/securityFragment"
        android:name="com.pdm.domohouse.ui.security.SecurityFragment"
        android:label="Security"
        tools:layout="@layout/fragment_home" />
        
    <fragment
        android:id="@+id/devicesFragment"
        android:name="com.pdm.domohouse.ui.devices.DevicesFragment"
        android:label="Devices"
        tools:layout="@layout/fragment_devices" />
        
    <!-- Fragmento de Configuraciones -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.pdm.domohouse.ui.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings" />

</navigation>